Move most backend-agnostic details from "OpenGLWindow" to "Visualization"
The OpenGL visualization currently uses many OpenGL legacy functions
(before 3.0).  The support for these functions is deteriorating.
Thus OpenGL support will likely be removed soon, if no one takes over
maintenance or at least migrates it to the new API.

See #134.

--- a/share/ui/plugin_selector.ui
+++ b/share/ui/plugin_selector.ui
@@ -38,12 +38,12 @@
         <col id="5" translatable="yes">/home/...</col>
       </row>
       <row>
-        <col id="0" translatable="yes">OpenGLWindow</col>
-        <col id="1" translatable="yes">Visualize the scene via OpenGL</col>
+        <col id="0" translatable="yes">VisualizationWindow</col>
+        <col id="1" translatable="yes">Visualize the 3D scene</col>
         <col id="2">False</col>
         <col id="3" translatable="yes">Many</col>
         <col id="4">False</col>
-        <col id="5" translatable="yes">http://somewher.org</col>
+        <col id="5" translatable="yes">http://somewhere.org</col>
       </row>
     </data>
   </object>
