Move X3D visualization to separate area in visualization window
This allows the widget to expand properly.

--- a/share/ui/visualization.ui
+++ b/share/ui/visualization.ui
@@ -315,7 +315,7 @@
       <placeholder/>
     </child>
     <child>
-      <object class="GtkBox" id="VisualizationBox">
+      <object class="GtkBox" id="VisualizationWindowBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
@@ -340,6 +340,29 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkAlignment" id="alignment2">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="left_padding">2</property>
+            <child>
+              <object class="GtkBox" id="VisualizationBox">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
+                <property name="spacing">1</property>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
           </packing>
         </child>
       </object>
